--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/01.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/01.md
@@ -14,19 +14,28 @@ unicode_script: devanagari
 ## सङ्कल्पः
 +++(र५)+++
 
-वागर्थाविव सम्पृक्तौ वागर्थप्रतिपत्तये ।  
-जगतः पितरौ वन्दे पार्वतीपरमेश्वरौ ॥ १ ॥  
+वागर्थाव् इव सम्पृक्तौ  
+वागर्थ-प्रतिपत्तये ।  
+जगतः पितरौ वन्दे  
+पार्वती-परमेश्वरौ ॥ १ ॥  
 
-क्व सूर्यप्रभवो वंशः क्व चाल्पविषया मतिः ।  
-तितीर्षुर्दुस्तरम् मोहादुडुपेनास्मि सागरम् ॥ २ ॥  
+क्व सूर्य-प्रभवो वंशः  
+क्व चाल्पविषया मतिः ।  
+तितीर्षुर् दुस्तरम् मोहाद्  
+उडुपेनास्मि सागरम् ॥ २ ॥  
 
-मन्दः कवियशः प्रार्थी गमिष्याम्युपहास्यताम् ।  
-प्रांशुलभ्ये फले लोभादुद्बाहुरिव वामनः ॥ ३ ॥  
+मन्दः कवियशः प्रार्थी  
+गमिष्याम्य् उपहास्यताम् ।  
+प्रांशुलभ्ये फले लोभाद्  
+उद्बाहुर् इव वामनः ॥ ३ ॥  
 
-अथ वा कृतवाग्द्वारे वंशेऽस्मिन्पूर्वसूरिभिः ।  
-मणौ वज्रसमुत्कीर्णे सूत्रस्येवास्ति मे गतिः ॥ ४ ॥  
+अथ वा कृत-वाग्-द्वारे  
+वंशेऽस्मिन् पूर्व-सूरिभिः ।  
+मणौ वज्र-समुत्कीर्णे  
+सूत्रस्येवास्ति मे गतिः ॥ ४ ॥  
 
-सोऽहम् आजन्मशुद्धानाम् आफलोदयकर्मणाम् ।  
+सोऽहम् आजन्म-शुद्धानाम्  
+आफलोदय-कर्मणाम् ।  
 आसमुद्रक्षितीशानाम् आनाकरथवर्त्मनाम् ॥ ५ ॥  
 
 यथाविधिहुताग्नीनाय्ँ यथाकामार्चितार्थिनाम् ।  
@@ -97,7 +106,6 @@ unicode_script: devanagari
 अप्यर्थकामौ तस्यास्तान् धर्म एव मनीषिणः ॥ २५ ॥  
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-26-50.mp3"></div>
-
 दुदोह गां स यज्ञाय सस्याय मघवा दिवम् ।  
 सम्पद्विनिमयेनोभौ दधतुर्भुवनद्वयम् ॥ २६ ॥  
 
