--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/01.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/01.md
@@ -6,8 +6,8 @@ unicode_script: devanagari
 
 ## परिचयः
 
-- मूलम् अत्र श्रूयताम् - [आर्कैवि](https://archive.org/details/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-01-17.mp3)।  
-- मल्लिनाथ-टीका [ऽत्र](https://archive.org/details/raghuvamsha_with_sanjeevini_commentary_of_mallinatha)।  
+- मूलम् अत्र श्रूयताम् - [आर्कैवि](https://archive.org/details/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-01-17.mp3) ।  
+- मल्लिनाथ-टीका [ऽत्र](https://archive.org/details/raghuvamsha_with_sanjeevini_commentary_of_mallinatha) ।  
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-01-17.mp3"></div>
 
@@ -36,119 +36,184 @@ unicode_script: devanagari
 
 सोऽहम् आजन्म-शुद्धानाम्  
 आफलोदय-कर्मणाम् ।  
-आसमुद्रक्षितीशानाम् आनाकरथवर्त्मनाम् ॥ ५ ॥  
+आसमुद्र-क्षितीशानाम्  
+आनाक-रथ-वर्त्मनाम् ॥ ५ ॥  
 
-यथाविधिहुताग्नीनाय्ँ यथाकामार्चितार्थिनाम् ।  
-यथापराधदण्डानाय्ँ यथाकालप्रभोधिनाम् ॥ ६ ॥  
+यथाविधि-हुताग्नीनाय्ँ  
+यथाकामार्चितार्थिनाम् ।  
+यथापराधदण्डानाय्ँ  
+यथाकाल-प्रभोधिनाम् ॥ ६ ॥  
 
-त्यागाय सम्भृतार्थानां सत्याय मितभाषिणाम् ।  
-यशसे विजिगीषुणाम् प्रजायै गृहमेन्धिनाम् ॥ ७ ॥  
+त्यागाय सम्भृतार्थानां  
+सत्याय मितभाषिणाम् ।  
+यशसे विजिगीषुणाम्  
+प्रजायै गृह-मेन्धिनाम् ॥ ७ ॥  
 
-शैशवेऽभ्यस्तविद्यानाय्ँ यौवने विषयैषिणाम् ।  
-वार्धके मुनिवृत्तीनाय्ँ योगेनान्ते तनुत्यजाम् ॥ ८ ॥  
+शैशवे ऽभ्यस्त-विद्यानाय्ँ  
+यौवने विषयैषिणाम् ।  
+वार्धके मुनिवृत्तीनाय्ँ  
+योगेनान्ते तनुत्यजाम् ॥ ८ ॥  
 
-रघूणाम् अन्वयव्ँ वक्ष्ये तनुवाग्विभवोऽपि सन् ।  
-तद्गुणैः कर्णमागत्य चापलाय प्रचोदितः ॥ ९ ॥  
+रघूणाम् अन्वयव्ँ वक्ष्ये  
+तनुवाग्-विभवोऽपि सन् ।  
+तद्गुणैः कर्णमागत्य  
+चापलाय प्रचोदितः ॥ ९ ॥  
 
-तं सन्तः श्रोतुमर्हन्ति सदसद्व्यक्तिहेतवः ।  
-हेम्नः संलक्ष्यते ह्यग्नौ विशुद्धिः श्यामिकापि वा ॥ १० ॥  
+तं सन्तः श्रोतुम् अर्हन्ति  
+सदसद्-व्यक्ति-हेतवः ।  
+हेम्नः संलक्ष्यते ह्य् अग्नौ  
+विशुद्धिः श्यामिकापि वा ॥ १० ॥  
 
-##‌ मनुः
-वैवसतो मनुर्नाम माननीयो मनीषिणाम् ।  
-आसीन्महीक्षितामाद्यः प्रणवश्छन्दसाम् इव ॥ ११ ॥+++(र५)+++  
+## मनुः
+वैवसतो मनुर् नाम  
+माननीयो मनीषिणाम् ।  
+आसीन् महीक्षिताम् आद्यः  
+प्रणवश् छन्दसाम् इव ॥ ११ ॥+++(र५)+++  
 
-##‌ दिलीपः
+## दिलीपः
 ### तद्गुणाः
 +++(र५)+++
 
-तदन्वये शुद्धिमति प्रसूतः शुद्धिमत्तरः ।  
-दिलीप इति राजेन्दुरिन्दुः क्षीरनिधाविव ॥ १२ ॥  
+तदन्वये शुद्धिमति  
+प्रसूतः शुद्धिमत्तरः ।  
+दिलीप इति राजेन्दुर्  
+इन्दुः क्षीरनिधाविव ॥ १२ ॥  
 
-व्यूढोरस्को वृषस्कन्धः शालप्रांशुर्महाभुजः ।  
-आत्मकर्मक्षमन् देहङ् क्षात्रो धर्म इवाश्रितः ॥ १३ ॥  
+व्यूढोरस्को वृषस्कन्धः  
+शाल-प्रांशुर् महाभुजः ।  
+आत्म-कर्म-क्षमन् देहङ्  
+क्षात्रो धर्म इवाश्रितः ॥ १३ ॥  
 
-सर्वातिरिक्तसारेण सर्वतेजोऽभिभाविना ।  
-स्थितः सर्वोन्नतेनोर्वीङ् क्रान्त्वा मेरुरिवात्मना ॥ १४ ॥  
+सर्वातिरिक्त-सारेण  
+सर्व-तेजोऽभिभाविना ।  
+स्थितः सर्वोन्नतेनोर्वीङ्  
+क्रान्त्वा मेरुर् इवात्मना ॥ १४ ॥  
 
-आकारसदृशप्रज्ञः प्रज्ञया सदृशागमः ।  
-आगमैः सदृशारम्भ आरम्भसदृशोदयः ॥ १५ ॥  
+आकार-सदृश-प्रज्ञः  
+प्रज्ञया सदृशागमः ।  
+आगमैः सदृशारम्भ  
+आरम्भसदृशोदयः ॥ १५ ॥  
 
-भीमकान्तैर्नृपगुणैः स भभूवोपजीविनाम् ।  
-अधृष्यश्चाभिगम्यश्च याधोरत्नैरिवार्णवः ॥ १६ ॥  
+भीमकान्तैर् नृपगुणैः  
+स भभूवोपजीविनाम् ।  
+अधृष्यश् चाभिगम्यश् च  
+याधो-रत्नैर् इवार्णवः ॥ १६ ॥  
 
-रेखामात्रम् अपि क्षुण्णादा मनोर्वर्त्मनः परम् ।  
-न व्यतीयुः प्रजास्तस्य नियन्तुर्नेमिवृत्तयः ॥ १७ ॥  
+रेखामात्रम् अपि क्षुण्णाद्  
+आ मनोर्वर्त्मनः परम् ।  
+न व्यतीयुः प्रजास् तस्य  
+नियन्तुर् नेमि-वृत्तयः ॥ १७ ॥  
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-18-25.mp3"></div>
 
-प्रजानामेव भूत्यर्थं स ताभ्यो बलिमग्रहीत् ।  
-सहस्रगुणम् उत्स्रष्टुम् आदत्ते हि रसं रविः ॥ १८ ॥  
+प्रजानाम् एव भूत्यर्थं  
+स ताभ्यो बलिमग्रहीत् ।  
+सहस्र-गुणम् उत्स्रष्टुम्  
+आदत्ते हि रसं रविः ॥ १८ ॥  
 
-सेना परिच्छदस्तस्य द्वयमेवार्थसाधनम् ।  
-शास्त्रेष्वकुण्ठिता बुद्धिर्मौर्वी धनुषि चातता ॥ १९ ॥  
+सेना परिच्छदस् तस्य,  
++++(यतः -)+++ द्वयम् एवार्थ-साधनम् ।  
+शास्त्रेष्व् अकुण्ठिता बुद्धिर्,  
+मौर्वी धनुषि चातता ॥ १९ ॥  
 
-तस्य सव्ँवृतमन्त्रस्य गूढाकारेङ्गितस्य च ।  
-फलानुमेयाः प्रारम्भाः संस्काराः प्राक्तना इव ॥ २० ॥  
+तस्य सव्ँवृत-मन्त्रस्य  
+गूढाकारेङ्गितस्य च ।  
+फलानुमेयाः प्रारम्भाः  
+संस्काराः प्राक्तना इव ॥ २० ॥  
 
-जुगोपात्मानमत्रस्तो भेजे धर्ममनातुरः ।  
-अगृध्नुराददे सोऽर्थमसक्तः सुखमन्वभूत् ॥ २१ ॥  
+जुगोपात्मानम् अत्रस्तो  
+भेजे धर्मम् अनातुरः ।  
+अगृध्नुर् आददे सोऽर्थम्  
+असक्तः सुखमन्वभूत् ॥ २१ ॥  
 
-ज्ञाने मौनङ् क्षमा शक्तौ त्यागे श्लाघाविपर्ययः ।  
-गुणा गुणानुबन्धित्वात्तस्य सप्रसवा इव ॥ २२ ॥  
+ज्ञाने मौनङ् क्षमा शक्तौ  
+त्यागे श्लाघा-विपर्ययः ।  
+गुणा गुणानुबन्धित्वात्  
+तस्य सप्रसवा इव ॥ २२ ॥  
 
-अनाकृष्टस्य विषयैर्विद्यानाम् पारदृश्वनः ।  
-तस्य धर्मरतेरासीद्वृद्धत्वञ् जरसा विना ॥ २३ ॥  
+अनाकृष्टस्य विषयैर्  
+विद्यानाम् पारदृश्वनः ।  
+तस्य धर्म-रतेर् आसीद्  
+वृद्धत्वञ् जरसा विना ॥ २३ ॥  
 
-प्रजानाव्ँ विनयाधानाद्रक्षणाद्भरणादपि ।  
-स पिता पितरस्तासाङ् केवलञ् जन्महेतवः ॥ २४ ॥  
+प्रजानाव्ँ विनयाधानाद्  
+रक्षणाद् भरणाद् अपि ।  
+स पिता पितरस् तासाङ्  
+केवलञ् जन्म-हेतवः ॥ २४ ॥  
 
-स्थित्यै दण्डयतो दण्ड्यान्परिणेतुः प्रसूतये ।  
-अप्यर्थकामौ तस्यास्तान् धर्म एव मनीषिणः ॥ २५ ॥  
+स्थित्यै दण्डयतो दण्ड्यान्  
+परिणेतुः प्रसूतये ।  
+अप्य् अर्थकामौ तस्यास्तान्  
+धर्म एव मनीषिणः ॥ २५ ॥  
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-26-50.mp3"></div>
-दुदोह गां स यज्ञाय सस्याय मघवा दिवम् ।  
-सम्पद्विनिमयेनोभौ दधतुर्भुवनद्वयम् ॥ २६ ॥  
+दुदोह गां स यज्ञाय  
+सस्याय मघवा दिवम् ।  
+सम्पद्-विनिमयेनोभौ  
+दधतुर् भुवनद्वयम् ॥ २६ ॥  
 
-न किलानुययुस्तस्य राजानो रक्षितुर्यशः ।  
-व्यावृत्ता यत्परस्वेभ्यः श्रुतौ तस्करता स्थिता ॥ २७ ॥  
+न किलानुययुस् तस्य  
+राजानो रक्षितुर् यशः ।  
++++(प्रजा)+++ व्यावृत्ता यत् पर-स्वेभ्यः,  
+श्रुतौ तस्करता स्थिता ॥ २७ ॥  
 
-द्वेष्योऽपि सम्मतः शिष्टस्तस्यार्तस्य यथौषधम् ।  
-त्याज्यो दुष्टः प्रियोऽप्यासीदङ्गुलीवोरगक्षता ॥ २८ ॥  
+द्वेष्योऽपि सम्मतः शिष्टस्  
+तस्यार्तस्य यथौषधम् ।  
+त्याज्यो दुष्टः प्रियोऽप्य् आसीद्  
+अङ्गुलीवोरग-क्षता ॥ २८ ॥  
 
-तव्ँ वेधा विदधे नूनम् महाभूतसमाधिना ।  
-तथा हि सर्वे तस्यासन्परार्थैकफला गुणाः ॥ २९ ॥  
+तव्ँ वेधा विदधे नूनम्  
+महाभूत-समाधिना ।  
+तथा हि सर्वे तस्यासन्  
+परार्थैक-फला गुणाः ॥ २९ ॥  
 
-स वेलावप्र+++(=प्राकार)+++वलयाम् परिखीकृतसागराम् ।  
-अनन्याशासनामूर्वीं शशासैकपुरीमिव ॥ ३० ॥  
+स वेला-वप्र+++(=प्राकार)+++-वलयाम्  
+परिखी-कृत-सागराम् ।  
+अनन्याशासनाम् ऊर्वीं  
+शशासैक-पुरीम् इव ॥ ३० ॥  
 
-###‌ तत्पत्नी
+### तत्पत्नी
 
-तस्य दाक्षिण्य+++(=परच्छन्दानुवर्त्तित्व)+++रुढेन नाम्ना मगधवंशजा ।  
-पत्नी सुदक्षिणेत्यासीदध्वरस्येव दक्षिणा ॥ ३१ ॥  
+तस्य दाक्षिण्य+++(=परच्छन्दानुवर्त्तित्व)+++-रुढेन  
+नाम्ना मगध-वंश-जा ।  
+पत्नी सुदक्षिणेत्य् आसीद्  
+अध्वरस्येव दक्षिणा ॥ ३१ ॥  
 
-कलत्रवन्तम् आत्मानम् अवरोधे महत्यपि ।  
-तया मेने मनस्विन्या लक्ष्म्या च वसुधाधिपः ॥ ३२ ॥+++(र५)+++  
+कलत्रवन्तम् आत्मानम्  
+अवरोधे महत्य् अपि ।  
+तया मेने मनस्विन्या  
+लक्ष्म्या च वसुधाधिपः ॥ ३२ ॥+++(र५)+++  
 
 ### पुत्रेच्छा
 +++(क५)+++
 
-तस्यामात्मानुरूपायामात्मजन्मसमुत्सुकः ।  
-विलम्बितफलैः कालं स निनाय मनोरथैः ॥ ३३ ॥+++(र५)+++  
+तस्याम् आत्मानुरूपायाम्  
+आत्म-जन्म-समुत्सुकः ।  
+विलम्बित-फलैः कालं  
+स निनाय मनोरथैः ॥ ३३ ॥+++(र५)+++  
 
-सन्तानार्थाय विधये स्वभुजादवतारिता ।  
-तेन धूर्जगतो गुर्वी सचिवेषु निचिक्षिपे ॥ ३४ ॥  
+सन्तानार्थाय विधये  
+स्वभुजाद् अवतारिता ।  
+तेन धूर् जगतो गुर्वी  
+सचिवेषु निचिक्षिपे ॥ ३४ ॥  
 
-गङ्गाम् भगीरथेनेव पूर्वेषाम् पावनक्षमाम् ।  
-इच्छता सन्ततिन् न्यस्ता तेन मन्त्रिषु कोसला ॥ ३४* ॥+++(र५)+++  
+गङ्गाम् भगीरथेनेव  
+पूर्वेषाम् पावनक्षमाम् ।  
+इच्छता सन्ततिन् न्यस्ता  
+तेन मन्त्रिषु कोसला ॥ ३४* ॥+++(र५)+++  
 
-अथाभ्यर्च्य विधातारम् प्रयतौ पुत्रकाम्यया ।  
-तौ दम्पती वसिष्ठस्य गुरोर्जग्मतुराश्रमम् ॥ ३५ ॥  
+अथाभ्यर्च्य विधातारम्  
+प्रयतौ पुत्रकाम्यया ।  
+तौ दम्पती वसिष्ठस्य  
+गुरोर् जग्मतुर् आश्रमम् ॥ ३५ ॥  
 
 ## आश्रमाय यानम्
 +++(र५)+++
 
-स्निग्धगम्भीरनिर्घोषम् एकं स्यन्दनम् आस्थितौ ।  
-प्रावृषेण्यं+++(प्रावृषि भवम्)+++ पयोवाहव्ँ विद्युदैरावताविव ॥ ३६ ॥  
+स्निग्ध-गम्भीर-निर्घोषम्  
+एकं स्यन्दनम् आस्थितौ ।  
+प्रावृषेण्यं+++(=प्रावृषि भवम्)+++ पयोवाहव्ँ  
+विद्युद्-ऐरावताव् इव ॥ ३६ ॥  
 
 मा भूदाश्रमपीडेति परिमेयपुरःसरौ ।  
 अनुभावविशेषात्तु सेनापरिवृताविव ॥ ३७ ॥  
