--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01.md
@@ -426,5 +426,5 @@ title = "०१"
 मध्यास्य प्रयतपरिग्रहद्वितीयः ।  
 तच्छिष्याध्ययननिवेदितावसानां  
 संविष्टः कुशशयने निशां निनाय ॥ 95 ॥  
-निर्दिष्टामिति॥ स राजा कुलपतिना मुनिकुलेश्वरेण वसिष्ठेन निर्दिष्टां पर्णशालामध्यास्याधिष्टाय। तस्यामधिष्ठानं कृत्वेत्यर्थः। 'अधिशीङ्-' (पा.1।4।46) इत्यादिनाधारस्य कर्मत्वम्। कर्मणि द्वितीया। प्रयतो नियतः परिग्रहः पत्नी द्वितीयो यस्येति स तथोक्तः। कुशानां शयने संविष्टः सुप्तः सन्। तस्य वसिष्टस्य शिष्याणामध्ययनेनापररात्रवेदपाठेन निवेदितमवसानं यस्यास्तां निशां निनाय गमयामास। अपररात्राध्ययने मनुः-(4।99) 'निशान्ते न परिश्रान्तो ब्रह्माधीत्य पुनः स्वपेत्'। 'न चापररात्रमधीत्य पुनः स्वपेत्' इति गौतमश्च। प्रहर्षिणीवृत्तमेतत्। तदुक्तम्-'म्नौ ज्रौ गस्त्त्रिदशयतिः प्रहर्षिणीयम्'॥  
+निर्दिष्टामिति॥ स राजा कुलपतिना मुनिकुलेश्वरेण वसिष्ठेन निर्दिष्टां पर्णशालामध्यास्याधिष्टाय। तस्यामधिष्ठानं कृत्वेत्यर्थः। 'अधिशीङ्-' (पा.1।4।46) इत्यादिनाधारस्य कर्मत्वम्। कर्मणि द्वितीया। प्रयतो नियतः परिग्रहः पत्नी द्वितीयो यस्येति स तथोक्तः। कुशानां शयने संविष्टः सुप्तः सन्। तस्य वसिष्टस्य शिष्याणामध्ययनेनापररात्रवेदपाठेन निवेदितमवसानं यस्यास्तां निशां निनाय गमयामास। अपररात्राध्ययने मनुः-(4।99) 'निशान्ते न परिश्रान्तो ब्रह्माधीत्य पुनः स्वपेत्'। 'न चापररात्रमधीत्य पुनः स्वपेत्' इति गौतमश्च। प्रहर्षिणीवृत्तमेतत्। तदुक्तम्-'म्नौ ज्रौ गस्त्त्रिदशयतिः प्रहर्षिणीयम्'॥ 95 ॥  
 इति महोपाध्यायकोलाचलमल्लिनाथसूरिविरचितया संजीवननीसमाख्यया व्याख्याया समेतो महाकविश्रीकालिदासकृतौ रघुवंशे महाकाव्ये वसिष्ठाश्रमाभिगमनो नाम प्रथमः सर्गः।  
