--- a/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/65.md
+++ b/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/65.md
@@ -2,7 +2,4 @@
 title = "65"
 
 +++
-त्वयेति॥ ब्रह्मा योनिः कारणं यस्य तेन ब्रह्मपुत्रेण गुरुणा त्वया। एवमुक्तप्रकारेण चिन्त्यमानस्यानुध्यायमानस्य। अत एव निरापदो व्यसनहीनस्य मे संपदः सानुबन्धाः सानुस्यूतयः। अविच्छिन्ना इति यावत्। कथं न स्युः? स्युरेवेत्यर्थः। 1.64 ।  
-संप्रत्यागमनप्रयोजनमाह-  
-किंतु वध्वां तवैतस्यामदृष्टसदृशप्रजम् ।  
-न मामवति सद्वीपा रत्नसूरपि मेदिनी ॥ 65 ॥
+किंत्विति॥ किंतु तवैतस्यां वध्यां स्नुषायाम्। 'वधूर्जाया स्नुषा चैव'इत्यमरः। अदृष्टा सदृश्यनुरूपा प्रजा येन तं मां सद्वीपापि। रत्नानि सूयत इति रत्नसूरपि। 'सत्सूद्विष-'(पा.3।2।61) इत्यादिना क्विप्। मेदिनी नावति न प्रीणाति। 'अव'धातू रक्षणगति प्रीत्याद्यर्थेषूपदेशादत्र प्रीणने। 'रत्नसूरपि' इत्यनेन सर्वरत्नेभ्यः पुत्ररत्नमेव श्लाघ्यमिति सूचितम्॥ 65 ॥
