--- a/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/68.md
+++ b/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/68.md
@@ -2,6 +2,4 @@
 title = "68"
 
 +++
-मत्परमिति॥ मत्परं मदनन्तरम्। 'अन्यारात्-' (पा.2।3।29) इत्यादिना पञ्चमी। दुर्लभं दुर्लभ्यं मत्वा मयावर्जितं दत्तं पयः पूर्वैः पितृभिः स्वनिःश्वासैर्दुःखजैः कवोष्णमीषदुष्णं यथा तथोपभुज्यते। नूनमिति वितर्के। कवेष्णमिति कुशब्दस्य कवादेशः,'कोष्णं कवोष्णं मन्दोष्णं कदुष्णं त्रिषु तद्वति' इत्यमरः॥ 67 ॥  
-सोऽहमिज्याविशुद्धात्मा प्रजालोपनिमीलितः ।  
-प्रकाशश्चाप्रकाशश्च लोकालोक इवाचलः ॥ 68 ॥
+सोऽहमिति॥ इज्या यागः। 'व्रजयजोर्भावे क्यप्' (पा.3।3।98) इति क्यप्प्रत्ययः। तया विशुद्धात्मा विशुद्धचेतनः प्रजालोपेन संतत्यभावेन निमीलितः कृतनिमीलनः सोऽहम्। लोक्यत इति लोकः। न लोक्यत इत्यलोकः। लोकश्चालोकश्चात्र स्त इति लोकश्चासावलोकश्चेति वा लोकालोकश्चक्रैवालोऽचल इव। 'लोकालोकश्चक्रवालः' इत्यमरः। प्रकाशत इति प्रकाशश्च देवर्णविमोचनात्। न प्रकाशत इत्यप्रकाशश्च पितॄणाविमोचनात्। पचाद्यच्। अस्मीति शेषः। लोकालोकोऽप्यन्तः सूर्यसंपर्काद्बहिस्तमोव्याप्त्या च प्रकाशश्चाप्रकाशश्चेति मन्तव्यम्॥ 68 ॥
