--- a/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/90.md
+++ b/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/90.md
@@ -2,6 +2,4 @@
 title = "90"
 
 +++
-प्रस्थितेति॥ अस्यां नन्दिन्यां प्रस्थितायां प्रतिष्ठेथाः प्रयाहि। 'समवप्रविभ्यः स्थः'(पा.1।3।22) इत्यात्मनेपदम्। स्थितायां निवृत्तगतिकायां स्थितिमाचरेः स्थितिं कुरु। तिष्ठेत्यर्थः। निषण्णायामुपविष्टायां निषीदोपविश। विध्यर्थे लोट्। पीतमम्भो यया तस्यां पीताम्भसि सत्यामपः पिबेः पिब। 1.89 ॥  
-वधूर्भक्तिमती चैनामर्चितामा तपोवनात् ।  
-प्रयता प्रातरन्वेतु सायं प्रत्युद्व्रजेदपि ॥ 90 ॥
+वधूरिति॥ वधूर्जाया च भक्तिमती प्रयता सती गन्धादिभिरर्चितामेनां गां प्रातरा तपोवनात्। आङ् मर्यादायाम्। पदद्वयं चैतत्। अन्वेत्वनुगच्छतु। सायमपि प्रत्युद्व्रजेत् प्रत्युद्गच्छेत्। विध्यर्थे लिङ् ॥ 90 ॥
