--- a/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/61.md
+++ b/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/61.md
@@ -2,8 +2,5 @@
 title = "61"
 
 +++
-तमिति॥ वराहाः। वाहनादश्वादीषदवनतोत्तरकायं किंचिदानतपूर्वकायं विध्यन्तं प्रहरन्तं तं नृपम्। उद्धृतसटा ऊर्ध्वकेसराः सन्तः। 'सटा जटाकेसरयोः' इति केशवः। प्रतिहन्तुमीषुः प्रतिहर्तुमैच्छन्। अस्य नृपस्येषुभिः सहसा जघनानामाश्रयेष्ववष्टम्भेषु वृक्षेषु विद्धमात्मानं न विविदुः। एतेन वराहाणां मनस्वित्वं नृपस्य हस्तलाघवं चोक्तम् ॥ (9.60 ॥  
-तेनाभिघातरभसस्य विकृष्य पत्री  
-      वन्यस्य नेत्रविवरे महिषस्य मुक्तः ।  
-निर्भिद्य विग्रहमशोणितलिप्तपुङ्ख-  
-      स्तं पातयां प्रथममास पपात पश्चात् ॥ 61 ॥
+  
+तेनेति॥ अभिघातो सभस औत्सुक्यं यस्य तस्य। अभिहन्तुमुद्यतस्येत्यर्थः। वन्यस्य वने भवस्य महिषस्य नेत्रविवरे नेत्रमध्ये तेन नृपेण विकृष्याकृष्य मुक्तः पत्री शरो विग्रहं महिषदेहं निर्भिद्य विदार्य। शोणितलिप्तो न भवतीत्यशोणितलिप्तः पुङ्खो यस्य स तथोक्तः सन्। तं महिषं प्रथमं पातयाभवतीत्यशोणितलिप्तः पुङ्खो यस्य स तथोक्तः सन्। तं महिषं प्रथमं पातयामास। स्वयं पश्चात्पपात। 'कृञ्चानुप्रयुज्यते लिटि'(पा.3।1।40)इत्यत्रानुशब्दस्य व्यवहितविपर्यस्तप्रयोगनिवृत्त्यर्थत्वात् 'पातयां प्रथममास' इत्यपप्रयोग  इति पाणिनीयाः। यथाह वार्तिककारः-'विपर्यासनिवृत्त्यर्थः व्यवहितवृत्त्यर्थं च' इति ॥ 61 ॥
