--- a/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/41.md
+++ b/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/41.md
@@ -2,6 +2,5 @@
 title = "41"
 
 +++
-तमिति॥ अग्रजो रामो लवणस्यान्तकं हन्तारं प्रणतं तं शत्रुघ्नम्। कालनेमिर्नाम राक्षसः। तस्य वधात्प्रीतः। तुरं वेगं सहत इति तुराषाडिन्द्रः । 'छन्दसि सहः'(पा.3।2।63) इति ण्वि प्रत्यया। यद्वा,-सहतेणिंचि कृते साहयतेः क्विप्। 'अन्येषामपि दृश्यते'(पा.6।3।137) इति पूर्वपदस्य दीर्घः। 'सहेः साडः सः'(पा.8।3।56) इति षत्वम्। शार्ङ्गिणमुपेन्द्रमिव। अभ्यनन्दत्॥ 40 >>  
-स पृष्टः सर्वतो वार्तमाख्यद्राज्ञे न संततिम् ।  
-प्रत्यर्पयिष्यतः काले करेराद्यस्य शासनात् ॥ 41 ॥
+  
+स इति॥ स शत्रुघ्नः पृष्टः सन्। सर्वतो वार्तं कुशलं राज्ञे रामाय। आख्यदाख्यातवान्। चक्षिङो लुङ्। 'चक्षिडः ख्याञ्'(पा.2।4।54)इति ख्याञादेशः। 'अस्यतिवक्ति-'(पा.3।1।52)इत्यङ्। 'आतो लोप इटि च'(पा.6।4।64) इत्याकारलोपः। ख्यातेर्वा लुङ्। संततिं कुशलवोत्पत्तिं नाख्यत्। कुतः? कालेऽवसरे प्रत्यर्पयिष्यत आद्यस्य कवेर्वाल्मीकेः शासनात् ॥ 41 ॥
