--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/69.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/69.md
@@ -2,7 +2,5 @@
 title = "69"
 
 +++
-सोऽहमिति॥ इज्या यागः। 'व्रजयजोर्भावे क्यप्' (पा.3।3।98) इति क्यप्प्रत्ययः। तया विशुद्धात्मा विशुद्धचेतनः प्रजालोपेन संतत्यभावेन निमीलितः कृतनिमीलनः सोऽहम्। लोक्यत इति लोकः। न लोक्यत इत्यलोकः। लोकश्चालोकश्चात्र स्त इति लोकश्चासावलोकश्चेति वा लोकालोकश्चक्रैवालोऽचल इव। 'लोकालोकश्चक्रवालः' इत्यमरः। प्रकाशत इति प्रकाशश्च देवर्णविमोचनात्। न प्रकाशत इत्यप्रकाशश्च पितॄणाविमोचनात्। पचाद्यच्। अस्मीति शेषः। लोकालोकोऽप्यन्तः सूर्यसंपर्काद्बहिस्तमोव्याप्त्या च प्रकाशश्चाप्रकाशश्चेति मन्तव्यम्॥  
-ननु तपोदानादिसंपन्नस्य किमपत्यैरित्यत्राह-  
-लोकान्तरसुखं पुण्यं तपोदानसमुद्भवम् ।  
-संततिः शुद्धवंश्या हि परत्रेह च शर्मणे ॥ 69 ॥
+  
+लोकान्तरेति॥ समुद्भवत्यस्मादिति समुद्भवः कारणम्। तपोदाने समुद्भवो यस्य तत् तपोदानसमुद्भवं यत्पुण्यं तल्लोकान्तरे परलोके सुखं सुखकरम्। शुद्धवंशे भवा शुद्धवंश्या संततिर्हि परत्र परलोक इह च लोके शर्मणे सुखाय। 'शर्मशातसुखानि च' इत्यमरः। भवतीति शेषः॥ 69 ॥
