--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/74.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/74.md
@@ -2,6 +2,5 @@
 title = "74"
 
 +++
-इतीति॥ इति राज्ञा विज्ञापित ऋषिर्ध्यानेन स्तिमिते लोचने यस्य ध्यानस्तिमितलोचनो निश्चलाक्षः सन् क्षणमात्रम्। सुप्तमीनो ह्रद इव। तस्थौ॥  
-सोऽपश्यत्प्रणिधानेन संततेः स्तम्भकारणम् ।  
-भावितात्मा भुवो भर्तुरथैनं प्रत्यबोधयत् ॥ 74 ॥
+  
+स इति॥ स मुनिः प्रणिधानेन चित्तैकाग्र्येण भावितात्मा शुद्धान्तःकरणो भुवो भर्तुर्नृपस्य संततेः स्तम्भकारणं संतानप्रतिबिन्धकारणमपश्यत्। अथानन्तरमेनं नृपं प्रत्यबोधयत्। स्वदृष्टं ज्ञापितवानित्यर्थः। एनमिति 'गतिबुद्धि-' (पा.1।4।52) इत्यादिनाणि कर्तुः कर्मत्वम् ॥ 74 ॥
