--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/45.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/45.md
@@ -2,6 +2,5 @@
 title = "45"
 
 +++
-वाचंयमेति॥ एष सुतीक्ष्णः। वाचं यच्छतीति वाचंयमो मौनव्रती। 'वाचि यमो व्रते'(पा.3।2।40)इति खच्प्रत्ययः। 'वाचंयमपुरंदरौ च' (पा.6।3।69)इति मुम्। तस्य भावस्तत्त्वान्मम प्रणतिं किंचिन्मूर्ध्नः कम्पेन प्रतिगृह्य विमानेन व्यवधानं तोरोधानं तस्मान्मुक्ताम्। अपेतापोढमुक्तपततित-'(पा.2।1।38) इत्यादिना पञ्चमीसमासः। दृष्टिं पुनः सहस्रार्चिषि सूर्ये संनिधत्ते । सम्यग्धत्त इत्यर्थः। अन्यथाऽकर्मकत्वप्रसङ्गात्' 13.44 ॥  
-अदः शरण्यं शरभङ्गनाम्नस्तपोवनं पावनमाहिताग्नेः ।  
-चिराय संतर्प्य समिद्भिरग्निं यो मन्त्रपूतां तनुमप्यहौषीत् ॥ 45 ॥
+  
+अद इति॥ शरणे रक्षणे साधु शरण्यम्। पावयतीति पावनम्। अदो दृश्यमानं तपोवनमाहिताग्नेः शरभङ्गनाम्नो मुनेः संबन्धि। यः शरभङ्गश्चिरायचिरमग्निं समिद्भिः संतर्प्य तर्पयित्वा ततो मन्त्रैः पूतां शुद्धां तनुमप्यहौषीद्धुतवान्। जुहोतेर्लुङ् ॥ 45 ॥
