--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/55.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/55.md
@@ -2,4 +2,4 @@
 title = "55"
 
 +++
-कुम्भेति॥ कुम्भयोनिरगस्त्यः पीतेन समुद्रेणात्मनिष्क्रयमिवात्ममोचनमूल्यमिव दत्तम्। अत एव परिगृह्यत इति व्युत्पत्त्या दिव्यपरिग्रहः। दिव्यानां परिग्राह्य इत्यर्थः। तमलंकारं तस्मै रामाय ददौ ॥ 55 ॥
+रघुनाथ इति॥ रघुनाथोऽपि मार्गसंदर्शितात्मना महौजसाऽगस्त्येन। इन्दुना शरत्काल इव संयुयुजे संगतः। इन्दावपि विशेषणं योज्यम्‌। 'रघुनाथ' इत्यत्र क्षुभ्रादित्वाण्णत्वाभावः ॥ 55 ॥
