--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/28.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/28.md
@@ -2,4 +2,4 @@
 title = "28"
 
 +++
-स इति॥ प्राचीनबर्हिर्नाम कश्चिन्महाराज इति केचित्। प्राचीनवर्हिरिन्द्रः। 'पर्जन्यो मघवा वृषा हरिहयः प्राचीनबर्हिस्तथा'इतीन्द्रपर्यायेषु हलायुधाभिधानात्। तेन तुल्यः स रघुः। अनिलेनानुकूलवातेनोद्धूतैः केतुभिर्ध्वजैरहितान् रिपून्। तर्जयन्निव भर्त्सयन्निव। तर्जभिर्त्स्योरनुदात्तेत्त्वे।ञपि चक्षिङो ङित्करणेनानुदात्तेत्त्वनिमित्तस्यात्मनेपदस्यानित्यत्वज्ञापनात्परस्मैपदमिति वामनः। प्रथमं प्राचीं दिशं ययौ ॥ 28 ॥
+प्रसादेति॥ प्रसादेन सुमुखे तस्मिन् रघौ विशदप्रभे निर्मलकान्तौ चन्द्रे च द्वयोर्विषये तदा चक्षुष्मतां प्रीतिरनुरागः समरसा समस्वादा। तुल्यभोगेति यावत्। 'रसो गन्धे रसः स्वादे' इति विश्वः। आसीत्॥ 28 ॥
