--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/24.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/24.md
@@ -2,6 +2,4 @@
 title = "24"
 
 +++
-इतीति॥ इत्येवं प्रतिषिद्धः प्रसरः स्वार्थप्रवृत्तिर्येषां तेषु शत्रुषु चेन्द्रियेषुप च जाग्रतावप्रमत्तावुदयापवर्गयोरभ्युदयमोक्षयोः प्रसितावासक्तौ। 'तत्परे प्रसितासक्तौ'इत्यमरः। उभघावजरघू उभयीं द्विविधामभ्युदयमोक्षरूपाम्। 'उभादुदात्तो नित्यम्'(पा.5।2।44) इति तपप्प्रत्ययस्यायजादेशः। 'टिड्ढा-'(पा.4।1।15)इति ङीप्। सिद्धिं फलमवापतुः। उभावुभे सिद्धी यथासंख्यमवापतुरित्यर्थः॥ 23 ॥  
-अथ काश्चिदजव्यपेक्षया गमयित्वा समदर्शनः समाः ।  
-तमसः परमापदव्ययं पुरुषं योगसमाधिना रघुः ॥ 24 ॥
+अथेति॥ अथ रघुः समदर्शनः सर्वभूतेषु समदृष्ठिः सन्नजव्यपेक्षयाऽजाकाङ्क्षानुरोधेन काश्चित्समाः कतिचिद्वर्षाणि। 'समा वर्षं समं तुल्यम्' इति विश्वः। गमयित्वा नीत्वा योगसमाधिनैक्यानुसंधानेन। 'संयोगो योग इत्युक्तो जीवात्मपरमात्मनोः'इति वसिष्ठः। अव्ययमविनाशिनं तमसः परमविद्यायाः परम्। मायातीतमित्यर्थः। पुरुषं परमात्मानम्। आपात् प्राप। सायुज्यं प्राप्त इत्यर्थः॥ 24 ॥
