--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/58.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/58.md
@@ -2,4 +2,4 @@
 title = "58"
 
 +++
-आश्वास्येति॥ रामावरजो लक्ष्मणः सतीं साध्वीं तामाश्वास्य। आख्यात उपदिष्टो वाल्मीकेर्निकेतस्याश्रमस्य मार्गो येन स तथोक्तः सन्। निघ्नस्य पराधीनस्य। 'अधीनो निघअन आयत्तः' इत्यमरः। मे भर्तृनिदेशेन स्वाम्यनुज्ञया हेतुनायद्रौक्ष्यं पारुष्यं तद्धे देवि! क्षमस्व। इति नम्रः प्रणतो बभूव ॥ 58 ॥
+न चेति॥ आर्या साध्वी सीता वृजिनादृत एनसो विनापि। 'कलुषं वृजिनैनोऽघम्' इत्यमरः। 'अन्यारादितरर्ते-'(पा.2।3।29) इत्यादिना पञ्चमी। निराकरिष्णोर्निरासकस्य। 'अलंकृञ्-'(पा.3।2।136) इत्यादिनेष्णुच्प्रत्ययः। भर्तुरवर्णमपवादं न चावदन्नैवावादीत्। किंतु स्थिरदुःखभाजमत एव दुष्कृतिनमात्मानं पुनः पुनर्निनिन्द ॥ 58 ॥
